--- a/_data/books.yml
+++ b/_data/books.yml
@@ -16,7 +16,7 @@
   description:
   genre: [novela]
   completed: '2022'
-  rating: 
+  rating:
 
 - title: El cerebro bilingüe. La neurociencia del lenguaje
   author: Albert Costa
@@ -242,67 +242,67 @@ En busca del origen del lenguaje es el libro definitivo para entender cómo se o
 #2020
 - title: Una lengua muy muy larga
   author: Lola Pons Rodríguez
-  link:
+  link: https://amzn.to/3VefTDb
   completed: '2020'
   rating: 5
 
 - title: Claves del lenguaje humano
   author: María Victoria Escandell Vidal y otros
-  link:
+  link: https://amzn.to/3OqBNRq
   completed: '2020'
   rating: 3
 
 - title: Somos lo que hablamos
   author: Luis Rojas Marcos
-  link:
+  link: https://amzn.to/3XjQSIC
   completed: '2020'
   rating: 3
 
 - title: Viviendo en el futuro
   author: Enrique Dans
-  link:
+  link: https://amzn.to/3GvqO7m
   completed: '2020'
   rating: 3
 
 - title: Ada Lovelace. La formación de una científica informática
   author: C. Hollings, U. Martin y A. Rice
-  link:
+  link: https://amzn.to/3UQk0W8
   completed: '2020'
   rating: 4
 
 - title: Teorías lingüísticas
   author: Ricardo Mairal
-  link:
+  link: https://amzn.to/3AsGi8a
   completed: '2020'
   rating: 4
 
 - title: Patria
   author: Fernando Aramburu
-  link:
+  link: https://amzn.to/3V7HwOa
   completed: '2020'
   rating: 5
 
 - title: Saber hablar
   author: Instituto Cervantes
-  link:
+  link: https://amzn.to/3ElzuKP
   completed: '2020'
   rating: 4
 
 - title: Lo imprevisible
   author: Marta García Aller
-  link:
+  link: https://amzn.to/3TUBm2B
   completed: '2020'
   rating: 3
 
 - title: Goodbye, Things. The New Japanese Minimalism
   author: Fumio Sasaki
-  link:
+  link: https://amzn.to/3hOdmkp
   completed: '2020'
   rating: 4
 
 - title: ¡Loca! Juana, reina de Castilla
   author: Neus Arqués
-  link:
+  link: https://amzn.to/3EoEuhP
   completed: '2020'
   rating: 3
 
@@ -314,73 +314,73 @@ En busca del origen del lenguaje es el libro definitivo para entender cómo se o
 
 - title: La revolución de la productividad
   author: Marc Reklau
-  link:
+  link: https://amzn.to/3tGjQo7
   completed: '2020'
   rating: 3
 
 - title: El enemigo conoce el sistema
   author: Marta Peirano
-  link:
+  link: https://amzn.to/3EJMATv
   completed: '2020'
   rating: 5
 
 - title: Babel. La vuelta al mundo en 20 idiomas
   author: Gaston Dorren
-  link:
+  link: https://amzn.to/3OljOvB
   completed: '2020'
   rating: 5
 
 - title: Tierra firme
   author: Matilde Asensi
-  link:
+  link: https://amzn.to/3EL9b1U
   completed: '2020'
   rating: 4
 
 - title: El árbol de la lengua
   author: Lola Pons Rodríguez
-  link:
+  link: https://amzn.to/3ELA85N
   completed: '2020'
   rating: 5
 
 - title: ¿Qué clase de criaturas somos?
   author: Noam Chomsky
-  link:
+  link: https://amzn.to/3V7cFkL
   completed: '2020'
   rating: 4
 
 - title: Hello World. How to be Human in the Age of the Machine
   author: Hannah Fry
-  link:
+  link: https://amzn.to/3As4jfJ
   completed: '2020'
   rating: 4
 
 - title: 500 años de frío
   author: Javier Peláez
-  link:
+  link: https://amzn.to/3hR5AX8
   completed: '2020'
   rating: 4
 
 - title: Poética de Aristóteles (Ed. trilingüe)
   author: Valentín García Yebra
-  link:
+  link: https://amzn.to/3hR5GxY
   completed: '2020'
   rating: 3
 
 - title: Cantar de Mío Cid
   author: Anónimo
-  link:
+  link: https://amzn.to/3OhmKcB
   completed: '2020'
   rating: 3
 
 - title: Reina Roja
   author: Juan Gómez-Jurado
-  link:
+  link: https://amzn.to/3EI3ZMm
   completed: '2020'
   rating: 4
 
 - title: El enigma de Colón y los descubrimientos de América
   author: Juan Eslava Galán
-  link:
+  link: https://amzn.to/3Xf6RaJ
   completed: '2020'
   rating: 3
 
