--- a/_data/books.yml
+++ b/_data/books.yml
@@ -387,7 +387,7 @@ En busca del origen del lenguaje es el libro definitivo para entender cómo se o
 #2019
 - title: 21 lecciones para el siglo XXI
   author: Yuval Noah Harari
-  link:
+  link: https://amzn.to/3OiKe0W
   completed: '2019'
   rating: 5
 
