--- a/_data/books.yml
+++ b/_data/books.yml
@@ -1,10 +1,22 @@
+- title: Los Austrias. El vuelo del águila
+  author: José Luis Corral
+  link: https://amzn.to/3tHI29E
+  image:
+  description:
+  genre: [novela]
+  completed: 'reading'
+  progress: '10%'
+  synopsis: "26 de noviembre de 1504. La reina Isabel la Católica acaba de morir y ya se empiezan a escuchar las voces de la mayoría de los nobles de Castilla, que reclaman a Juana la Loca como su verdadera reina. Fernando de Aragón intenta llegar hasta donde sea necesario para impedir que su yerno, Felipe el Hermoso, le arrebate el gobierno de las tierras castellanas.
+Entretanto, la casa de Austria, mediante una política de pactos y enlaces matrimoniales, pugna por convertirse en la familia más poderosa de Europa. Todos los países de la cristiandad, papado incluido, se enredan en una serie de luchas por el poder en las que el sexo, la violencia y el crimen se utilizan como armas para conseguir sus fines políticos. En medio de todos esos conflictos, una familia de judíos conversos, los Losantos, luchará por sobrevivir a la Inquisición, aunque para ello tenga que renunciar a sus propias raíces.<br/>Los Austrias. El vuelo del águila es la gran novela de un tiempo y de un imperio que sentó las bases de un mundo nuevo: nuestro mundo."
+  cover: "elvuelodelaguila.jpeg"
+
 - title: Línea de fuego
   author: Arturo Pérez-Reverte
   link: https://amzn.to/3sIgjoV
   image:
   description:
   genre: [novela]
-  completed: 'reading'
+  completed: '2022'
   progress: '19%'
   synopsis: "En la noche del 24 al 25 de julio de 1938, durante la batalla del Ebro, 2.890 hombres y 14 mujeres de la XI Brigada Mixta del ejército de la República cruzan el río para establecer la cabeza de puente de Castellets del Segre, donde combatirán durante diez días. Sin embargo, ni Castellets, ni la XI Brigada, ni las tropas que se le enfrentan en Línea de fuego existieron nunca. Las unidades militares, los lugares y los personajes que en esta novela aparecen son ficticios, aunque no lo sean los hechos ni los nombres reales en que se inspiran. Fue exactamente así como padres, abuelos y familiares de numerosos españoles de hoy combatieron en ambos bandos durante aquellos días y aquellos trágicos años.<br/>La batalla del Ebro fue la más dura y sangrienta de cuantas se han librado en nuestro suelo, y sobre ella hay abundante documentación, partes de guerra y testimonios personales. Con todo eso, combinando rigor e invención, el autor más leído de la literatura española actual ha construido, no ya una novela sobre la Guerra Civil, sino una formidable novela de hombres y mujeres en cualquier guerra: un relato ecuánime y fascinante donde se recupera la memoria de nuestros padres y abuelos, que es también nuestra propia historia.<br/>Con Línea de fuego, Arturo Pérez-Reverte sitúa con sobrecogedor realismo al lector entre quienes, voluntarios o a la fuerza, estuvieron no en la retaguardia, sino peleando en ambos bandos en los frentes de batalla. En España se han escrito muchas y excelentes novelas sobre esa contienda desde distintas posiciones ideológicas, pero ninguna como ésta. Nunca antes la Guerra Civil se había contado así."
   cover: "lineadefuego.jpeg"
@@ -393,97 +405,97 @@ En busca del origen del lenguaje es el libro definitivo para entender cómo se o
 
 - title: ¿Cuándo? La ciencia de encontrar el momento preciso
   author: Daniel H. Pink
-  link:
+  link: https://amzn.to/3XeHplz
   completed: '2019'
   rating: 3
 
 - title: Por encima de la lluvia
   author: Víctor del Árbol
-  link:
+  link: https://amzn.to/3VcLkxq
   completed: '2019'
   rating: 3
 
 - title: Aprendiendo de los mejores
   author: Francisco Alcaide
-  link:
+  link: https://amzn.to/3V9o9Eb
   completed: '2019'
   rating: 3
 
 - title: Desconecta
   author: Marc Masip
-  link:
+  link: https://amzn.to/3gli1Ks
   completed: '2019'
   rating: 3
 
 - title: El orden del día
   author: Éric Vuillard
-  link:
+  link: https://amzn.to/3EM1XuH
   completed: '2019'
   rating: 3
 
 - title: 50 líderes que hicieron historia
   author: Luis Huete y Javier García
-  link:
+  link: https://amzn.to/3ghSSjI
   completed: '2019'
   rating: 3
 
 - title: El alma de los pulpos
   author: Sy Montgomery
-  link:
+  link: https://amzn.to/3tJSMEH
   completed: '2019'
   rating: 3
 
 - title: La maleta de Ana
   author: Celia Santos
-  link:
+  link: https://amzn.to/3Eoujty
   completed: '2019'
   rating: 3
 
 - title: ¿Qué haremos cuando las máquinas lo hagan todo?
   author: M. Frank, P. Roehrig y B. Pring
-  link:
+  link: https://amzn.to/3tGYUO3
   completed: '2019'
   rating: 3
 
 - title: Científicas
   author: Jorge Bolívar
-  link:
+  link: https://amzn.to/3XfRoHm
   completed: '2019'
   rating: 4
 
 - title: wabi sabi. Aprender a aceptar la imperfección
   author: Tomás Navarro
-  link:
+  link: https://amzn.to/3ge869C
   completed: '2019'
   rating: 4
 
 - title: Pretérito imperfecto
   author: Nieves Concostrina
-  link:
+  link: https://amzn.to/3hVXHjg
   completed: '2019'
   rating: 3
 
 - title: Conversaciones con mi enano de jardín
   author: Jean-Paul Didierlaurent
-  link:
+  link: https://amzn.to/3V9oy9F
   completed: '2019'
   rating: 5
 
 - title: Una historia de España
   author: Arturo Pérez-Reverte
-  link:
+  link: https://amzn.to/3gmCTku
   completed: '2019'
   rating: 5
 
 - title: La influencia silenciosa
   author: Roberto Brasero
-  link:
+  link: https://amzn.to/3XlcUe2
   completed: '2019'
   rating: 4
 
 - title: Desde la sombra
   author: Juan José Millás
-  link:
+  link: https://amzn.to/3TOYgbN
   completed: '2019'
   rating: 5
 
