Book data updated

--- a/_data/books.yml
+++ b/_data/books.yml
@@ -554,26 +554,26 @@ En busca del origen del lenguaje es el libro definitivo para entender cómo se o
   completed: 2018
   rating: 4
 
-- title: «El resto de sus vidas»
+- title: El resto de sus vidas»
   author: Jean-Paul Didierlaurent
-  link:
+  link: https://amzn.to/3EojpDU
   completed: 2018
   rating: 5
   fav: 'yes'
 
-- title: «El fuego invisible»
+- title: El fuego invisible
   author: Javier Sierra
-  link:
+  link: https://amzn.to/3EjBiUB
   completed: 2018
   rating: 4
 
-- title: «El Premio Nobel de Literatura»
+- title: El Premio Nobel de Literatura
   author: Sture Allén y Kjell Espmark
   link:
   completed: 2018
   rating: 3
 
-- title: «Dublín de cerca»
+- title: Dublín de cerca
   author: Fionn Davenport
   link:
   completed: 2018
@@ -581,68 +581,68 @@ En busca del origen del lenguaje es el libro definitivo para entender cómo se o
 
 - title: «Falcó»
   author: Arturo Pérez-Reverte
-  link:
+  link: https://amzn.to/3V79euk
   completed: 2018
   rating: 5
 
 - title: «Que nadie duerma»
   author: Juan José Millás
-  link:
+  link: https://amzn.to/3GvA5Mp
   completed: 2018
   rating: 4
 
 - title: «Eva»
   author: Arturo Pérez-Reverte
-  link:
+  link: https://amzn.to/3UQLefn
   completed: 2018
   rating: 5
 
 - title: «Historia mínima de España»
   author: Juan Pablo Fusi
-  link:
+  link: https://amzn.to/3EojEPk
   completed: 2018
   rating: 3
 
 - title: «Sabotaje»
   author: Arturo Pérez-Reverte
-  link:
+  link: https://amzn.to/3TQ1pbi
   completed: 2018
   rating: 4
 
 - title: «Sapiens. De animales a dioses»
   author: Yuval Noah Harari
-  link:
+  link: https://amzn.to/3hWdMW9
   completed: 2018
   rating: 5
   fav: 'yes'
 
 - title: «Jacquard's Web»
   author: James Essinger
-  link:
+  link: https://amzn.to/3XaVTDb
   completed: 2018
   rating: 5
 
 - title: «Momentos estelares de la historia de España»
   author: José Calvo Poyato
-  link:
+  link: https://amzn.to/3EJGBy2
   completed: 2018
   rating: 3
 
 - title: «La librería»
   author: Penelope Fitzgerald
-  link:
+  link: https://amzn.to/3V47WjW
   completed: 2018
   rating: 2
 
 - title: «La vida secreta de las vacas»
   author: Rosamund Young
-  link:
+  link: https://amzn.to/3UT6919
   completed: 2018
   rating: 2
 
 - title: «La semana laboral de 4 horas»
   author: Timothy Ferriss
-  link:
+  link: https://amzn.to/3tMkktc
   completed: 2018
   rating: 3
 
@@ -654,19 +654,19 @@ En busca del origen del lenguaje es el libro definitivo para entender cómo se o
 
 - title: «Breves respuestas a las grandes preguntas»
   author: Stephen Hawking
-  link:
+  link: https://amzn.to/3Xj3f7G
   completed: 2018
   rating: 3
 
 - title: «¿Qué es comer sano?»
   author: J.M. Mulet
-  link:
+  link: https://amzn.to/3Op5mmb
   completed: 2018
   rating: 4
 
 - title: «Homo Deus. Breve historia del mañana»
   author: Yuval Noah Harari
-  link:
+  link: https://amzn.to/3EIbeDT
   completed: 2018
   rating: 5
   fav: 'yes'
@@ -674,133 +674,133 @@ En busca del origen del lenguaje es el libro definitivo para entender cómo se o
 #2017
 - title: «El laberinto de los espíritus»
   author: Carlos Ruiz Zafón
-  link:
+  link: https://amzn.to/3XaWeWt
   completed: 2017
   rating: 4
 
 - title: «Medicina sin engaños»
   author: J.M. Mulet
-  link:
+  link: https://amzn.to/3tMkwsq
   completed: 2017
   rating: 4
 
 - title: «Los nativos digitales no existen»
   author: S. Lluna y J. Pedreira
-  link:
+  link: https://amzn.to/3AtKJzJ
   completed: 2017
   rating: 4
 
 - title: «La sociedad gaseosa»
   author: Alberto Royo
-  link:
+  link: https://amzn.to/3Av1avp
   completed: 2017
   rating: 5
   fav: 'yes'
 
 - title: «El efecto matrimonio»
   author: Graeme Simsion
-  link:
+  link: https://amzn.to/3UPp7Gb
   completed: 2017
   rating: 4
 
 - title: «Transgénicos sin miedo»
   author: J.M. Mulet
-  link:
+  link: https://amzn.to/3Vfwd6B
   completed: 2017
   rating: 5
 
 - title: «Un año en Roma»
   author: Anthony Doerr
-  link:
+  link: https://amzn.to/3TSzqYH
   completed: 2017
   rating: 4
 
 - title: «Roma de cerca»
   author: Duncan Garwood
-  link:
+  link: https://amzn.to/3VeayM7
   completed: 2017
   rating: 4
 
 - title: «Roma. Una historia cultural»
   author: Robert Hughes
-  link:
+  link: https://amzn.to/3UUT9s6
   completed: 2017
   rating: 4
 
 - title: «Los productos naturales ¡vaya timo!»
   author: J.M. Mulet
-  link:
+  link: https://amzn.to/3EjBSSh
   completed: 2017
   rating: 4
 
 - title: «Cuando llega la luz»
   author: Clara Sánchez
-  link:
+  link: https://amzn.to/3Aq1Fqv
   completed: 2017
   rating: 5
 
 - title: «Breve historia del mundo»
   author: Ernst H. Gombrich
-  link:
+  link: https://amzn.to/3AyaleD
   completed: 2017
   rating: 4
 
 - title: «En la piel de una yihadista»
   author: Anna Erelle
-  link:
+  link: https://amzn.to/3Op5T7F
   completed: 2017
   rating: 4
 
 - title: «Historia y ciencia de los viajes en el tiempo»
   author: José Antonio de la Peña
-  link:
+  link: https://amzn.to/3GzbztV
   completed: 2017
   rating: 3
 
 - title: «Cómo hacemos las cosas en IKEA»
   author: Anders Dahlvig
-  link:
+  link: https://amzn.to/3GvAYVf
   completed: 2017
   rating: 4
 
 - title: «Los secretos que jamás te contaron. Para vivir en este mundo y ser feliz cada día»
   author: Albert Espinosa
-  link:
+  link: https://amzn.to/3hY82eh
   completed: 2017
   rating: 2
 
 - title: «Organízate con eficacia»
   author: David Allen
-  link:
+  link: https://amzn.to/3XhUFG1
   completed: 2017
   rating: 5
 
 - title: «Educative Innovéision»
   author: Jordi Martí
-  link:
+  link: https://amzn.to/3EIJUWa
   completed: 2017
   rating: 4
 
 - title: «La catedral de Turing»
   author: George Dyson
-  link:
+  link: https://amzn.to/3UPpWPh
   completed: 2017
   rating: 4
 
 - title: «No Plot? No Problem!»
   author: Chris Baty
-  link:
+  link: https://amzn.to/3Gzc07x
   completed: 2017
   rating: 3
 
 - title: «Las estrategias del narrador»
   author: Silvia Adela Kohan
-  link:
+  link: https://amzn.to/3Xf17Oe
   completed: 2017
   rating: 4
 
 - title: «Estocolmo de cerca»
   author: Becky Ohlsen
-  link:
+  link: https://amzn.to/3AyaEGj
   completed: 2017
   rating: 4
