--- a/_data/books.yml
+++ b/_data/books.yml
@@ -1,3 +1,26 @@
+- title: Clarissa
+  author: Stefan Zweig
+  link: https://amzn.to/3TPmaUz
+  image:
+  description:
+  genre: [novela]
+  completed: 'next'
+  progress: '5%'
+  synopsis: "Clarissa, hija de un militar austríaco, conoce en Lucerna a Léonard, un joven socialista francés del que se enamora. El estallido de la Gran Guerra separa a los amantes y la joven, que ha quedado embarazada, debe volver a Austria en medio de una Europa que se desgarra, donde toma la decisión de tener y criar a un hijo del enemigo. Esta conmovedora novela tardía de Zweig es hoy considerada el testamento en el que el extraordinario escritor austríaco condensó los ideales humanísticos que abrazó durante toda su vida."
+  cover: "clarissa.jpeg"
+
+- title: La noche en que Frankenstein leyó el Quijote. La vida secreta de los libros.
+  author: Santiago Posteguillo
+  link: https://amzn.to/3EKMESJ
+  image:
+  description:
+  genre: [novela]
+  completed: 'next'
+  progress: '5%'
+  synopsis: "¿Quién escribió las obras de Shakespeare? ¿Qué libro perseguía el KGB? ¿Qué novela ocultó Hitler? ¿Quién pensó en el orden alfabético para organizar los libros? ¿Qué autor burló al índice de libros prohibidos de la Inquisición? Estos y otros enigmas literarios encuentran respuesta en las páginas de La noche en que Frankenstein leyó el Quijote, un viaje en el tiempo por la historia de la literatura universal de la mano de Santiago Posteguillo, uno de los novelistas históricos más reconocidos por la crítica y el público de los últimos años. Y un profesor de literatura… poco convencional."
+  cover: "frankensteinquijote.jpeg"
+
+
 - title: Los Austrias. El vuelo del águila
   author: José Luis Corral
   link: https://amzn.to/3tHI29E
@@ -554,7 +577,7 @@ En busca del origen del lenguaje es el libro definitivo para entender cómo se o
   completed: 2018
   rating: 4
 
-- title: El resto de sus vidas»
+- title: El resto de sus vidas
   author: Jean-Paul Didierlaurent
   link: https://amzn.to/3EojpDU
   completed: 2018
@@ -579,92 +602,92 @@ En busca del origen del lenguaje es el libro definitivo para entender cómo se o
   completed: 2018
   rating: 4
 
-- title: «Falcó»
+- title: Falcó
   author: Arturo Pérez-Reverte
   link: https://amzn.to/3V79euk
   completed: 2018
   rating: 5
 
-- title: «Que nadie duerma»
+- title: Que nadie duerma
   author: Juan José Millás
   link: https://amzn.to/3GvA5Mp
   completed: 2018
   rating: 4
 
-- title: «Eva»
+- title: Eva
   author: Arturo Pérez-Reverte
   link: https://amzn.to/3UQLefn
   completed: 2018
   rating: 5
 
-- title: «Historia mínima de España»
+- title: Historia mínima de España
   author: Juan Pablo Fusi
   link: https://amzn.to/3EojEPk
   completed: 2018
   rating: 3
 
-- title: «Sabotaje»
+- title: Sabotaje
   author: Arturo Pérez-Reverte
   link: https://amzn.to/3TQ1pbi
   completed: 2018
   rating: 4
 
-- title: «Sapiens. De animales a dioses»
+- title: Sapiens. De animales a dioses
   author: Yuval Noah Harari
   link: https://amzn.to/3hWdMW9
   completed: 2018
   rating: 5
   fav: 'yes'
 
-- title: «Jacquard's Web»
+- title: Jacquard's Web
   author: James Essinger
   link: https://amzn.to/3XaVTDb
   completed: 2018
   rating: 5
 
-- title: «Momentos estelares de la historia de España»
+- title: Momentos estelares de la historia de España
   author: José Calvo Poyato
   link: https://amzn.to/3EJGBy2
   completed: 2018
   rating: 3
 
-- title: «La librería»
+- title: La librería
   author: Penelope Fitzgerald
   link: https://amzn.to/3V47WjW
   completed: 2018
   rating: 2
 
-- title: «La vida secreta de las vacas»
+- title: La vida secreta de las vacas
   author: Rosamund Young
   link: https://amzn.to/3UT6919
   completed: 2018
   rating: 2
 
-- title: «La semana laboral de 4 horas»
+- title: La semana laboral de 4 horas
   author: Timothy Ferriss
   link: https://amzn.to/3tMkktc
   completed: 2018
   rating: 3
 
-- title: «Más tiempo para los más ocupados»
+- title: Más tiempo para los más ocupados
   author: Berto Pena
   link:
   completed: 2018
   rating: 3
 
-- title: «Breves respuestas a las grandes preguntas»
+- title: Breves respuestas a las grandes preguntas
   author: Stephen Hawking
   link: https://amzn.to/3Xj3f7G
   completed: 2018
   rating: 3
 
-- title: «¿Qué es comer sano?»
+- title: ¿Qué es comer sano?
   author: J.M. Mulet
   link: https://amzn.to/3Op5mmb
   completed: 2018
   rating: 4
 
-- title: «Homo Deus. Breve historia del mañana»
+- title: Homo Deus. Breve historia del mañana
   author: Yuval Noah Harari
   link: https://amzn.to/3EIbeDT
   completed: 2018
@@ -672,135 +695,140 @@ En busca del origen del lenguaje es el libro definitivo para entender cómo se o
   fav: 'yes'
 
 #2017
-- title: «El laberinto de los espíritus»
+- title: El laberinto de los espíritus
   author: Carlos Ruiz Zafón
   link: https://amzn.to/3XaWeWt
   completed: 2017
   rating: 4
 
-- title: «Medicina sin engaños»
+- title: Medicina sin engaños
   author: J.M. Mulet
   link: https://amzn.to/3tMkwsq
   completed: 2017
   rating: 4
 
-- title: «Los nativos digitales no existen»
+- title: Los nativos digitales no existen
   author: S. Lluna y J. Pedreira
   link: https://amzn.to/3AtKJzJ
   completed: 2017
   rating: 4
 
-- title: «La sociedad gaseosa»
+- title: La sociedad gaseosa
   author: Alberto Royo
   link: https://amzn.to/3Av1avp
   completed: 2017
   rating: 5
   fav: 'yes'
 
-- title: «El efecto matrimonio»
+- title: El efecto matrimonio
   author: Graeme Simsion
   link: https://amzn.to/3UPp7Gb
   completed: 2017
   rating: 4
 
-- title: «Transgénicos sin miedo»
+- title: Transgénicos sin miedo
   author: J.M. Mulet
   link: https://amzn.to/3Vfwd6B
   completed: 2017
   rating: 5
 
-- title: «Un año en Roma»
+- title: Un año en Roma
   author: Anthony Doerr
   link: https://amzn.to/3TSzqYH
   completed: 2017
   rating: 4
 
-- title: «Roma de cerca»
+- title: Roma de cerca
   author: Duncan Garwood
   link: https://amzn.to/3VeayM7
   completed: 2017
   rating: 4
 
-- title: «Roma. Una historia cultural»
+- title: Roma. Una historia cultural
   author: Robert Hughes
   link: https://amzn.to/3UUT9s6
   completed: 2017
   rating: 4
 
-- title: «Los productos naturales ¡vaya timo!»
+- title: Los productos naturales ¡vaya timo!
   author: J.M. Mulet
   link: https://amzn.to/3EjBSSh
   completed: 2017
   rating: 4
 
-- title: «Cuando llega la luz»
+- title: Cuando llega la luz
   author: Clara Sánchez
   link: https://amzn.to/3Aq1Fqv
   completed: 2017
   rating: 5
 
-- title: «Breve historia del mundo»
+- title: Breve historia del mundo
   author: Ernst H. Gombrich
   link: https://amzn.to/3AyaleD
   completed: 2017
   rating: 4
 
-- title: «En la piel de una yihadista»
+- title: En la piel de una yihadista
   author: Anna Erelle
   link: https://amzn.to/3Op5T7F
   completed: 2017
   rating: 4
 
-- title: «Historia y ciencia de los viajes en el tiempo»
+- title: Historia y ciencia de los viajes en el tiempo
   author: José Antonio de la Peña
   link: https://amzn.to/3GzbztV
   completed: 2017
   rating: 3
 
-- title: «Cómo hacemos las cosas en IKEA»
+- title: Cómo hacemos las cosas en IKEA
   author: Anders Dahlvig
   link: https://amzn.to/3GvAYVf
   completed: 2017
   rating: 4
 
-- title: «Los secretos que jamás te contaron. Para vivir en este mundo y ser feliz cada día»
+- title: Los secretos que jamás te contaron. Para vivir en este mundo y ser feliz cada día
   author: Albert Espinosa
   link: https://amzn.to/3hY82eh
   completed: 2017
   rating: 2
 
-- title: «Organízate con eficacia»
+- title: Organízate con eficacia
   author: David Allen
   link: https://amzn.to/3XhUFG1
   completed: 2017
   rating: 5
 
-- title: «Educative Innovéision»
+- title: Educative Innovéision
   author: Jordi Martí
   link: https://amzn.to/3EIJUWa
   completed: 2017
   rating: 4
 
-- title: «La catedral de Turing»
+- title: La catedral de Turing
   author: George Dyson
   link: https://amzn.to/3UPpWPh
   completed: 2017
   rating: 4
 
-- title: «No Plot? No Problem!»
+- title: No Plot? No Problem!
   author: Chris Baty
   link: https://amzn.to/3Gzc07x
   completed: 2017
   rating: 3
 
-- title: «Las estrategias del narrador»
+- title: Las estrategias del narrador
   author: Silvia Adela Kohan
   link: https://amzn.to/3Xf17Oe
   completed: 2017
   rating: 4
 
-- title: «Estocolmo de cerca»
+- title: Estocolmo de cerca
   author: Becky Ohlsen
   link: https://amzn.to/3AyaEGj
   completed: 2017
   rating: 4
+
+- title: Cosas que me contó un pajarito. Confesiones de una mente creativa
+  author: Biz Stone
+  link: https://amzn.to/3hVL9Z4
+  rating: 3
