Log and menu update

--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,13 @@
+- timestamp: 11/20/2022, 16:46:00 PM
+  text: "Aprender. Hacer. Mejorar = Éxito"
+  link: https://twitter.com/junhanchin/status/1594001879901605888
+  cat: illustration
+
+- timestamp: 11/20/2022, 16:44:00 PM
+  text: "Población europea en 1444"
+  link: https://twitter.com/memoriastambor/status/1594282890447175681
+  cat: history
+
 - timestamp: 11/18/2022, 22:41:00 PM
   text: "He actualizado el rincón de lectura con mi valoración personal de cada obra y una selección de libros favoritos."
   link: https://www.ebenimeli.org/pages/bookshelf.html
