--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 12/17/2022, 17:42:00 PM
+  text: "Una predicción bastante precisa de Internet hace casi 50 años."
+  link: https://twitter.com/enriquebenimeli/status/1604148800788041728
+  cat: history
+
 - timestamp: 11/20/2022, 16:46:00 PM
   text: "Aprender. Hacer. Mejorar = Éxito"
   link: https://twitter.com/junhanchin/status/1594001879901605888
