--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 12/17/2022, 20:25:00 PM
+  text: "Integridad es decirse la verdad a uno mismo. Honestidad es decirle la verdad a los demás."
+  link: https://www.instagram.com/p/CmRxNkgKubb/
+  cat: quote
+
 - timestamp: 12/17/2022, 17:42:00 PM
   text: "Una predicción bastante precisa de Internet hace casi 50 años."
   link: https://twitter.com/enriquebenimeli/status/1604148800788041728
