--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,8 @@ author:
 
 # URL settings
 url: "https://www.ebenimeli.org" # Domain Name of host. [username].github.io for github pages
+#url: "http://localhost:4000" # Domain Name of host. [username].github.io for github pages
+
 #url: "http://www.ebenimeli.org/beta" # Domain Name of host. [username].github.io for github pages
 
 permalink: pretty
