--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,13 @@
+- timestamp: 12/25/2022, 20:05:00 PM
+  text: "Nuevo vídeo en el canal: «150 fotografías que hablan»"
+  link: https://youtu.be/G7Ppl3DXuok
+  cat: art
+
+- timestamp: 12/24/2022, 08:00:00 PM
+  text: "Feliz Navidad"
+  link: https://www.ebenimeli.org/feliznavidad22
+  cat: personal
+
 - timestamp: 12/17/2022, 20:25:00 PM
   text: "Integridad es decirse la verdad a uno mismo. Honestidad es decirle la verdad a los demás."
   link: https://www.instagram.com/p/CmRxNkgKubb/
