--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 12/31/2022, 21:15:00 PM
+  text: "Feliz y próspero 2023"
+  link: https://twitter.com/enriquebenimeli/status/1609282167053369347
+  cat: personal
+
 - timestamp: 12/25/2022, 20:05:00 PM
   text: "Nuevo vídeo en el canal: «150 fotografías que hablan»"
   link: https://youtu.be/G7Ppl3DXuok
