--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 01/02/2023, 19:55:00 PM
+  text: "Caminos en la vida: pasado, presente y futuro. Siempre lo había imaginado así."
+  link: https://twitter.com/enriquebenimeli/status/1609987156063453186
+  cat: personal
+
 - timestamp: 12/31/2022, 21:15:00 PM
   text: "Feliz y próspero 2023"
   link: https://twitter.com/enriquebenimeli/status/1609282167053369347
