--- a/_data/habits.yml
+++ b/_data/habits.yml
@@ -1,14 +1,14 @@
 - date: 01/01/2023
-  sleep: 7
-  riseearly: 6:00
-  read: no
-  chess: win
-  getridof: yes
-  declutter: 'no'
-  deutsch: 0
+  sleep: 7.0
+  riseearly: '06:00'
+  read: 60
+  chess: 1
+  getridof: 1
+  declutter: 0
+  lang: 0
   uni: 0
-  walk: 3
-  screentime: 3
+  walk: 3.24
+  screentime: 5.5
   gtd: 'no'
   write: 250
   clothes: 'no'
@@ -16,35 +16,35 @@
   family:
 
 - date: 02/01/2023
-  sleep: 8
-  riseearly:
-  read: 30
-  chess: win
-  getridof: 'no'
-  declutter: 'yes'
-  deutsch: 25
+  sleep: 8.0
+  riseearly: '08:05'
+  read: 60
+  chess: 1
+  getridof: 1
+  declutter: 10
+  lang: 25
   uni: 0
-  walk: 1.13
-  screentime: 3
+  walk: 1.27
+  screentime: 7.0
   gtd: 'no'
-  write: 'no'
+  write: 0
   clothes: 'no'
   journal: 'no'
   family: yes
 
 - date: 03/01/2023
-  sleep: 0
-  riseearly:
-  read:
-  chess:
-  getridof: 'no'
-  declutter: 'no'
-  deutsch: 0
+  sleep: 7.5
+  riseearly: '07:16'
+  read: 30
+  chess: 1
+  getridof: 0
+  declutter: 0
+  lang: 0
   uni: 0
-  walk: 0
-  screentime: 1.5
+  walk: 0.1
+  screentime: 0.5
   gtd: 'no'
-  write: 'no'
+  write: 500
   clothes: 'no'
   journal: 'no'
   family: 'no'
