--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,18 @@
+- timestamp: 01/03/2023, 18:01:00 PM
+  text: "Hoy, esto me ha ahorrado algo de tiempo programando: How TO - Tooltip"
+  link: https://www.w3schools.com/howto/howto_css_tooltip.asp
+  cat: code
+
+- timestamp: 01/03/2023, 17:59:00 PM
+  text: "Lo que hay que hacer a veces para redondear un número."
+  link: https://shopify.github.io/liquid/filters/round/
+  cat: code
+
+- timestamp: 01/03/2023, 17:57:00 PM
+  text: "Empiezo el año terminando de leer esta recopilación de artículos de Javier Marías. Se publicaron entre febrero de 2019 y enero de 2021."
+  link: https://twitter.com/enriquebenimeli/status/1609903869684752384
+  cat: reading
+
 - timestamp: 01/02/2023, 19:55:00 PM
   text: "Caminos en la vida: pasado, presente y futuro. Siempre lo había imaginado así."
   link: https://twitter.com/enriquebenimeli/status/1609987156063453186
