--- a/_data/habits.yml
+++ b/_data/habits.yml
@@ -50,19 +50,21 @@
 - date: 04/01/2023
   sleep: 9.0
   riseearly: 'no'
-  riseearlytime: '08:24'
-  read: 0
+  riseearlytime: '?'
+  # 08:24: llevo un par de días resfriado
+  read: 1
   chess: 3
   getridof: 0
   declutter: 0
   lang: 0
-  uni: 0
-  walk: 0
-  screentime: 3
-  gtd: 'no'
-  write: 0
+  walk: 1.0
+  # día en casa resfriado
+  screentime: 1.5
+  gtd: 4
+  write: 525
+  # escribí sobre la comunicación eficaz y he empezado a crear una lista de capítulos
   clothes: 'no'
-  journal: 'no'
+  journal: 'yes'
   family: 'no'
 
 
