--- a/_data/habits.yml
+++ b/_data/habits.yml
@@ -75,13 +75,31 @@
   getridof: 0
   declutter: 0
   lang: 0
-  uni: 0
   walk: 0
-  screentime: 3
+  screentime: 2.5
   gtd: 'no'
   write: 557
   clothes: 'no'
   journal: 'yes'
+  family: 'yes'
+
+- date: 06/01/2023
+  sleep: 9
+  riseearly: 'no'
+  riseearlytime: ':('
+  # 08:23
+  read: 0
+  chess: 1
+  getridof: 0
+  declutter: 0
+  lang: 0
+  uni: 0
+  walk: 0
+  screentime: 3
+  gtd: 'no'
+  write: 0
+  clothes: 'no'
+  journal: 'no'
   family: 'yes'
 
 # TEMPLATE
