Log updated (podcast section announcement)

--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,13 @@
+- timestamp: 01/06/2023, 17:09:00 AM
+  text: "Nueva sección de podcasts en esta web"
+  link: https://www.ebenimeli.org/pages/podcasts.html
+  cat: web
+
+- timestamp: 01/06/2023, 08:00:00 AM
+  text: "Feliz día de Reyes"
+  link:
+  cat: personal
+
 - timestamp: 01/03/2023, 18:01:00 PM
   text: "Hoy, esto me ha ahorrado algo de tiempo programando: How TO - Tooltip"
   link: https://www.w3schools.com/howto/howto_css_tooltip.asp
