--- a/_data/habits.yml
+++ b/_data/habits.yml
@@ -75,7 +75,7 @@
   getridof: 0
   declutter: 0
   lang: 0
-  walk: 0
+  walk: 5
   screentime: 2.5
   gtd: 'no'
   write: 557
@@ -90,16 +90,17 @@
   # 08:23
   read: 0
   chess: 1
-  getridof: 0
+  getridof: 2
+  # Dos bolsas de ropa para Cáritas
   declutter: 0
   lang: 0
   uni: 0
-  walk: 0
-  screentime: 3
-  gtd: 'no'
+  walk: 2.0
+  screentime: 1.75
+  gtd: '3'
   write: 0
   clothes: 'no'
-  journal: 'no'
+  journal: 'yes'
   family: 'yes'
 
 # TEMPLATE
