--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,11 +1,16 @@
+- timestamp: 01/07/2023, 07:46:00 AM
+  text: "¿Qué es el éxito? Esto es el éxito, según Marc Randolph, cofundador de Netflix."
+  link: https://twitter.com/mbrandolph/status/1611425941246574594
+  cat: thought
+
 - timestamp: 01/06/2023, 17:09:00 AM
-  text: "Nueva sección de podcasts en esta web"
+  text: "Nueva sección de podcasts en esta web. ¿Me recomendáis alguno sobre ciencia, tecnología, historia o productividad?"
   link: https://www.ebenimeli.org/pages/podcasts.html
   cat: web
 
 - timestamp: 01/06/2023, 08:00:00 AM
   text: "Feliz día de Reyes"
-  link:
+  link: https://es.wikipedia.org/wiki/Reyes_Magos
   cat: personal
 
 - timestamp: 01/03/2023, 18:01:00 PM
@@ -21,7 +26,7 @@
 - timestamp: 01/03/2023, 17:57:00 PM
   text: "Empiezo el año terminando de leer esta recopilación de artículos de Javier Marías. Se publicaron entre febrero de 2019 y enero de 2021."
   link: https://twitter.com/enriquebenimeli/status/1609903869684752384
-  cat: reading
+  cat: read
 
 - timestamp: 01/02/2023, 19:55:00 PM
   text: "Caminos en la vida: pasado, presente y futuro. Siempre lo había imaginado así."
@@ -146,12 +151,12 @@
 - timestamp: 11/02/2022, 20:12:00 PM
   text: "En una entrevista, Arturo Pérez-Reverte dijo: «Si yo ahora fuese un joven escritor no haría novelas, haría videojuegos y series de televisión. El futuro es eso». Y la gente de «Más de uno» ha hecho esto..."
   link: https://twitter.com/enriquebenimeli/status/1587885276646363136
-  cat: literature
+  cat: quote
 
 - timestamp: 11/02/2022, 19:52:00 PM
   text: "No hay dos personas que lean el mismo libro (Edmund Wilson)"
   link: https://twitter.com/profedonPardino/status/1587508989960617984
-  cat: literature
+  cat: quote
 
 - timestamp: 11/02/2022, 19:51:00 PM
   text: "Para los nostálgicos: los sonidos que escuchábamos hace 40 años"
@@ -191,7 +196,7 @@
 - timestamp: 10/30/2022, 18:32:00 AM
   text: "Leyendo «Línea de fuego» de Arturo Pérez-Reverte"
   link: https://www.ebenimeli.org/pages/bookshelf.html
-  cat: reading
+  cat: read
 
 - timestamp: 10/30/2022, 13:45:00 AM
   text: "Parallel lives: matching portraits from South and North Korea – in pictures"
@@ -327,7 +332,7 @@
 - timestamp: 10/21/2022, 17:10:00 PM
   text: "«Los códigos de prioridad «ABC» no funcionan». David Allen comparte en este artículo una opinión radicalmente distinta respecto a la gestión de prioridades, si es que algo así existe. Lo comparte Formación GTD de OPTIMA Lab."
   link: https://formaciongtd.com/blog/hablemos-de-como-establecer-prioridades/
-  cat: reading
+  cat: read
 
 - timestamp: 10/21/2022, 2:00:00 PM
   text: "Nuevo artículo en Ocho en punto: «22 microhábitos de 2 minutos»"
@@ -377,7 +382,7 @@
 - timestamp: 10/11/2022, 3:14:34 PM
   text: Leyendo «Línea de fuego» de Arturo Pérez-Reverte
   link: https://amzn.to/3fT67a1
-  cat: reading
+  cat: read
 
 - timestamp: 10/10/2022, 10:02:35 PM
   text: "¡Hola, mundo!"
