--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,4 +1,9 @@
 - timestamp: 01/07/2023, 07:46:00 AM
+  text: "He creado un rincón de ajedrez en ests web. Publico el final de alguna de las partidas diarias ganadas."
+  link: https://www.ebenimeli.org/pages/chess.html
+  cat: chess
+
+- timestamp: 01/07/2023, 07:46:00 AM
   text: "¿Qué es el éxito? Esto es el éxito, según Marc Randolph, cofundador de Netflix."
   link: https://twitter.com/mbrandolph/status/1611425941246574594
   cat: thought
