--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,5 +1,15 @@
+- timestamp: 01/09/2023, 08:00:00 AM
+  text: "Hoy, vuelta al trabajo."
+  link:
+  cat: personal
+
+- timestamp: 01/08/2023, 16:33:00 AM
+  text: "Nuevo artículo en «Ocho en punto» - Somos lo que hacemos día a día - 8 claves para definir nuestros hábitos"
+  link: https://www.ochoenpunto.com/somos-lo-que-hacemos-dia-a-dia-8-claves-definir-habitos/
+  cat: write
+
 - timestamp: 01/07/2023, 07:46:00 AM
-  text: "He creado un rincón de ajedrez en ests web. Publico el final de alguna de las partidas diarias ganadas."
+  text: "He creado un rincón de ajedrez en esta web. Publico el final de alguna de las partidas diarias ganadas."
   link: https://www.ebenimeli.org/pages/chess.html
   cat: chess
 
