--- a/_data/habits.yml
+++ b/_data/habits.yml
@@ -4,6 +4,7 @@
   read: 1.0
   chess: 1
   getridof: 0
+  getridof_t: '(0)'
   declutter: 0
   lang: 0
   walk: 3.24
@@ -21,6 +22,7 @@
   read: 1.0
   chess: 1
   getridof: 0
+  getridof_t: '(0)'
   declutter: 0.25
   lang: 0.5
   walk: 1.27
@@ -37,6 +39,7 @@
   read: 1.0
   chess: 1
   getridof: 1
+  getridof_t: '(1)'
   declutter: 0
   lang: 0.5
   walk: 6.3
@@ -55,6 +58,7 @@
   read: 1.5
   chess: 3
   getridof: 0
+  getridof_t: '(0)'
   declutter: 0
   lang: 0
   walk: 1.0
@@ -73,6 +77,7 @@
   read: 0.5
   chess: 1
   getridof: 0
+  getridof_t: '(0)'
   declutter: 0
   lang: 0
   walk: 5
@@ -91,7 +96,7 @@
   read: 0.5
   chess: 1
   getridof: 2
-  # Dos bolsas de ropa para Cáritas
+  getridof_t: '(2) Bolsas de ropa'
   declutter: 1.0
   lang: 0
   walk: 2.9
@@ -108,6 +113,7 @@
   read: 0
   chess: 0
   getridof: 1
+  getridof_t: '(1)'
   # restos del montaje de muebles
   declutter: 3.5
   # montaje de muebles y organización
@@ -127,6 +133,7 @@
   read: 0
   chess: 1
   getridof: 0
+  getridof_t: '(0)'
   declutter: 0
   lang: 0
   walk: 0
@@ -144,6 +151,7 @@
   read: 0.5
   chess: 1
   getridof: 0
+  getridof_t: '(0)'
   declutter: 0.5
   lang: 0
   walk: 11.1
@@ -160,14 +168,15 @@
   riseearly: '06:24'
   read: 1.0
   chess: 4.0
-  getridof: 0
-  declutter: 0
-  lang: 0
+  getridof: 1
+  getridof_t: '(1) Antigua mochila'
+  declutter: 0.5
+  lang: 0.5
   walk: 6.2
   screentime: 1.75
   gtd: 'yes'
-  write: 0
-  clothes: 'no'
+  write: 518
+  clothes: 'yes'
   journal: 'yes'
   family: 'yes'
   arb: 4.25
