--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,9 +1,14 @@
+- timestamp: 01/14/2023, 16:15:00 PM
+  text: "Nuevo artículo en «Ocho en punto» - «5 formas de salir del bloqueo productivo»"
+  link: https://www.ochoenpunto.com/5-formas-de-salir-del-bloqueo-productivo/
+  cat: write
+
 - timestamp: 01/09/2023, 08:00:00 AM
   text: "Hoy, vuelta al trabajo."
   link:
   cat: personal
 
-- timestamp: 01/08/2023, 16:33:00 AM
+- timestamp: 01/08/2023, 16:33:00 PM
   text: "Nuevo artículo en «Ocho en punto» - Somos lo que hacemos día a día - 8 claves para definir nuestros hábitos"
   link: https://www.ochoenpunto.com/somos-lo-que-hacemos-dia-a-dia-8-claves-definir-habitos/
   cat: write
