--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 01/21/2023, 16:22:00 PM
+  text: "Nuevo artículo en «Ocho en punto» - «Tus datos sincronizados, seguros y en orden»"
+  link: https://www.ochoenpunto.com/tus-datos-sincronizados-seguros-y-en-orden/
+  cat: write
+
 - timestamp: 01/14/2023, 16:15:00 PM
   text: "Nuevo artículo en «Ocho en punto» - «5 formas de salir del bloqueo productivo»"
   link: https://www.ochoenpunto.com/5-formas-de-salir-del-bloqueo-productivo/
